Bug 424276 - Album covers have horrible downscaling artifacts unless folder.jpg is present
Summary: Album covers have horrible downscaling artifacts unless folder.jpg is present
Status: RESOLVED FIXED
Alias: None
Product: Elisa
Classification: Applications
Component: general (other bugs)
Version First Reported In: 20.04.1
Platform: Manjaro Linux
: NOR normal
Target Milestone: ---
Assignee: Matthieu Gallien
URL:
Keywords:
: 424677 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-07-16 08:56 UTC by blazikenssbm
Modified: 2020-07-28 18:32 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
before and after adding a 'folder.jpg' image of the cover art to those album's directories. (428.52 KB, image/png)
2020-07-16 08:56 UTC, blazikenssbm
Details
updated explaination of the bug (1.77 MB, image/png)
2020-07-18 06:11 UTC, blazikenssbm
Details

Note You need to log in before you can comment on or make changes to this bug.
Description blazikenssbm 2020-07-16 08:56:15 UTC
Created attachment 130165 [details]
before and after adding a 'folder.jpg' image of the cover art to those album's directories.

SUMMARY
Under the 'Albums' tab, albums that only have the cover in the mp3's metadata will have horrible downscaling artifacts. However, if an album's directory contains a 'folder.jpg' of the cover, it will be downscaled properly.

STEPS TO REPRODUCE
1. Set Elisa to scan an album directory and make sure all the mp3's have the album cover in the metadata and that there is no folder.jpg of the album cover
2. Wait for Elisa to scan in the album
3. Open the "Albums" tab and look at the preview

OBSERVED RESULT
Album covers in the "Album" tab have bad artifacting when there is no 'folder.jpg' file of the cover in the folder of the album.

EXPECTED RESULT
Album covers taken from the mp3's metadata are scaled the same as album covers taken from a 'folder.jpg' file from within the album directory and are without artifacting.

SOFTWARE/OS VERSIONS
Linux: Manjaro
Kernel: 5.6.14-xanmod
KDE Plasma Version: 5.18.5
KDE Frameworks Version: 5.70.0
Qt Version: 5.15.0

ADDITIONAL NOTES
this artifacting issue also occurs in the 'Playlist', 'Frequently Played', 'Recently Played', and 'Tracks' tabs, but it's definitely most noticeable in the in 'Albums' tab as the preview is much larger there.
Comment 1 Matthieu Gallien 2020-07-16 21:28:15 UTC
Thanks for your report.

There may be an issue with the cover image provider. I will have a look in a few days and will update the bug report.
Comment 2 Nate Graham 2020-07-17 03:30:18 UTC
Very useful visual aid, thanks.
Comment 3 blazikenssbm 2020-07-18 06:11:28 UTC
Created attachment 130215 [details]
updated explaination of the bug

I re-read my bug report and wasn't satisfied with my explanation, so I created a graphic that better explains the issue.
Comment 4 Matthieu Gallien 2020-07-27 21:05:56 UTC
I am working on a fix.
Comment 5 Bug Janitor Service 2020-07-27 21:42:35 UTC
A possibly relevant merge request was started @ https://invent.kde.org/multimedia/elisa/-/merge_requests/139
Comment 6 Matthieu Gallien 2020-07-27 21:45:47 UTC
I am working on a fix.(In reply to Bug Janitor Service from comment #5)
> A possibly relevant merge request was started @
> https://invent.kde.org/multimedia/elisa/-/merge_requests/139

It would be very nice if you are able to test this possible fix.
Comment 7 Matthieu Gallien 2020-07-28 16:01:24 UTC
Git commit 85c3e04acf58bc97ad73f1f2c227c0f868c55d03 by Matthieu Gallien.
Committed on 28/07/2020 at 16:01.
Pushed by mgallien into branch 'release/20.08'.

fix image provider to scale images to requested size with good quality

M  +12   -0    src/embeddedcoverageimageprovider.cpp

https://invent.kde.org/multimedia/elisa/commit/85c3e04acf58bc97ad73f1f2c227c0f868c55d03
Comment 8 Nate Graham 2020-07-28 18:32:32 UTC
*** Bug 424677 has been marked as a duplicate of this bug. ***