fix image provider to scale images to requested size with good quality

BUG: 424276